<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".RegistoActivity">

    <EditText
        android:id="@+id/et_registo_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/insira_o_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/et_registo_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/insira_a_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/et_registo_password1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/repita_a_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/bt_registo_registar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registar" />

</LinearLayout>